--- a/src/project/config.json
+++ b/src/project/config.json
@@ -1,35 +1,1 @@
-{
-  "target": [
-    "person",
-    "bicycle"
-  ],
-  "ROI": [
-    {
-      "name": "Side",
-      "coordinates": [
-        "83",
-        "20",
-        "49",
-        "73"
-      ]
-    },
-    {
-      "name": "Back",
-      "coordinates": [
-        "1",
-        "23",
-        "63",
-        "52"
-      ]
-    },
-    {
-      "name": "Front",
-      "coordinates": [
-        "268",
-        "26",
-        "87",
-        "243"
-      ]
-    }
-  ]
-}
+{"target": ["person"], "ROI": [{"name": "back", "coordinates": [85, 20, 52, 66]}, {"name": "back2", "coordinates": [3, 25, 48, 51]}, {"name": "front", "coordinates": [298, 15, 53, 253]}]}
