--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,25 @@
-{"target": ["person"], "ROI": [{"name": "bot", "coordinates": [65, 162, 204, 52]}, {"name": "top", "coordinates": [46, 20, 262, 54]}]}
+{
+  "target": [
+    "person"
+  ],
+  "ROI": [
+    {
+      "name": "bot",
+      "coordinates": [
+        43,
+        171,
+        227,
+        44
+      ]
+    },
+    {
+      "name": "top",
+      "coordinates": [
+        17,
+        17,
+        265,
+        51
+      ]
+    }
+  ]
+}
