--- a/src/project/camera/config.json
+++ b/src/project/camera/config.json
@@ -1,25 +1,1 @@
-{
-  "target": [
-    "person"
-  ],
-  "ROI": [
-    {
-      "name": "bot",
-      "coordinates": [
-        43,
-        171,
-        227,
-        44
-      ]
-    },
-    {
-      "name": "top",
-      "coordinates": [
-        17,
-        17,
-        265,
-        51
-      ]
-    }
-  ]
-}
+{"target": ["person"], "ROI": [{"name": "Rechts", "coordinates": [507, 62, 120, 403]}, {"name": "Links", "coordinates": [13, 70, 108, 398]}]}
